<resources>
    <string name="app_name">FilmPolis</string>

    <!-- AdMob ad unit IDs -->
    <string name="id_app">ca-app-pub-1131721560634431~1147220512</string>
    <string name="id_banner">ca-app-pub-1131721560634431/6016403817</string>

    <string name="hint_search_movie">Type a title...</string>
    <string name="hint_search_actor">Type a name...</string>
    <string name="hint_search_director">Type a name...</string>

    <string name="sub_imdbId">imdb id</string>
    <string name="sub_released">released</string>
    <string name="sub_rated">rated</string>
    <string name="sub_studio">studio</string>
    <string name="sub_genre">genre</string>
    <string name="sub_language">language</string>
    <string name="sub_runtime">runtime</string>
    <string name="sub_score">score</string>
    <string name="sub_actors">actors</string>
    <string name="sub_directors">directors</string>
    <string name="sub_description">description</string>
    <string name="sub_age">age</string>
    <string name="sub_biography">biography</string>
    <string name="sub_birthday">birth day</string>
    <string name="sub_deathday">death day</string>
    <string name="sub_birthplace">birth place</string>
    <string name="sub_gender">gender</string>

    <string name="CANNOT_CONNECT">can\'t connect!</string>
</resources>
