<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="actor"
            type="com.filmpolis.models.Actor"/>
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <ScrollView
            android:fillViewport="true"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            tools:context="com.filmpolis.DetailsActivity">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/text_title"
                        android:text="@{actor.name}"
                        android:textColor="@color/colorBlack"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="horizontal"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <ImageView
                                android:id="@+id/iv_image_actor"
                                android:layout_width="match_parent"
                                android:layout_height="300dp"
                                android:scaleType="fitXY"
                                android:gravity="center_vertical"
                                app:imageUrl="@{actor.imageURL}"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_age"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_age"
                                android:layout_marginTop="6dp"
                                android:layout_marginLeft="2dp"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack"
                                />
                            <TextView
                                android:id="@+id/tv_age_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@{actor.age}"
                                android:layout_marginTop="6dp"
                                android:layout_marginLeft="@dimen/text_indent"
                                android:textSize="@dimen/text_des" />
                            <TextView
                                android:id="@+id/tv_biography"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_biography"
                                android:layout_marginTop="6dp"
                                android:layout_marginLeft="2dp"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack"/>
                            <TextView
                                android:id="@+id/tv_biography_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@{actor.biography}"
                                android:layout_marginTop="6dp"
                                android:layout_marginLeft="@dimen/text_indent"
                                android:textSize="@dimen/text_des" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_birthday"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:maxLines="1"
                                android:gravity="center_vertical"
                                android:text="@string/sub_birthday"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack" />
                            <TextView
                                android:id="@+id/tv_birthday_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:maxLines="1"
                                android:gravity="center_vertical"
                                android:text="@{actor.birthDay}"
                                android:textSize="@dimen/text_des"
                                android:layout_marginLeft="@dimen/text_indent"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_deathday"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_deathday"
                                android:layout_marginTop="6dp"
                                android:layout_marginLeft="2dp"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack"/>
                            <TextView
                                android:id="@+id/tv_deathday_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@{actor.deathDay}"
                                android:layout_marginTop="6dp"
                                android:layout_marginLeft="@dimen/text_indent"
                                android:textSize="@dimen/text_des" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_birthplace"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_birthplace"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack"/>
                            <TextView
                                android:id="@+id/tv_birthplace_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@{actor.birthPlace}"
                                android:textSize="@dimen/text_des"
                                android:layout_marginLeft="@dimen/text_indent"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_gender"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_gender"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack"/>
                            <TextView
                                android:id="@+id/tv_gender_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@{actor.gender}"
                                android:textSize="@dimen/text_sub_title"
                                android:layout_marginLeft="@dimen/text_indent"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="5dp"
                        android:padding="5dp">
                        <TextView
                            android:id="@+id/tv_imdb_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/sub_imdbId"
                            android:textSize="@dimen/text_sub_title"
                            android:textColor="@color/colorBlack"/>
                        <TextView
                            android:id="@+id/tv_imdb_id_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@{actor.imdbId}"
                            android:textSize="@dimen/text_des"
                            android:layout_marginLeft="@dimen/text_indent"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>