<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="movie"
            type="com.filmpolis.models.Movie"/>
    </data>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <ScrollView
            android:fillViewport="true"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            tools:context="com.filmpolis.DetailsActivity">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/text_title"
                        android:text="@{movie.title}"
                        android:textColor="@color/colorBlack"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="horizontal"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <ImageView
                                android:id="@+id/iv_image_movie"
                                android:layout_width="match_parent"
                                android:layout_height="300dp"
                                android:scaleType="fitXY"
                                android:gravity="center_vertical"
                                app:imageUrl="@{movie.imageURL}"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_imdb_rating"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="************"
                                android:layout_marginTop="6dp"
                                android:layout_marginLeft="2dp" />
                            <TextView
                                android:id="@+id/tv_description"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_description"
                                android:layout_marginTop="6dp"
                                android:layout_marginLeft="2dp"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack"/>
                            <TextView
                                android:id="@+id/tv_description_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@{movie.description}"
                                android:layout_marginTop="6dp"
                                android:layout_marginLeft="2dp"
                                android:textSize="@dimen/text_des"
                                android:textColor="@color/colorBlack"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_imdb_id"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:gravity="center_vertical"
                                android:text="@string/sub_imdbId"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack" />
                            <TextView
                                android:id="@+id/tv_imdb_id_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:gravity="center_vertical"
                                android:text="@{movie.imdbId}"
                                android:textSize="@dimen/text_des"
                                android:layout_marginLeft="@dimen/text_indent"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_released"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_released"
                                android:layout_marginTop="6dp"
                                android:layout_marginLeft="2dp"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack"/>
                            <TextView
                                android:id="@+id/tv_released_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@{movie.released}"
                                android:layout_marginTop="6dp"
                                android:textSize="@dimen/text_des"
                                android:layout_marginLeft="@dimen/text_indent"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_rated"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_rated"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack"/>
                            <TextView
                                android:id="@+id/tv_rated_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@{movie.rated}"
                                android:textSize="@dimen/text_des"
                                android:layout_marginLeft="@dimen/text_indent"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_studio"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_studio"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack"/>
                            <TextView
                                android:id="@+id/tv_studio_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@{movie.studio}"
                                android:textSize="@dimen/text_des"
                                android:layout_marginLeft="@dimen/text_indent"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_genre"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:gravity="center_vertical"
                                android:text="@string/sub_genre"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack"/>
                            <TextView
                                android:id="@+id/tv_genre_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:maxLines="1"
                                android:gravity="center_vertical"
                                android:text="@{movie.genre}"
                                android:textSize="@dimen/text_des"
                                android:layout_marginLeft="@dimen/text_indent"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_language"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_language"
                                android:layout_marginTop="6dp"
                                android:layout_marginLeft="2dp"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack"/>
                            <TextView
                                android:id="@+id/tv_language_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@{movie.language}"
                                android:layout_marginTop="6dp"
                                android:textSize="@dimen/text_des"
                                android:layout_marginLeft="@dimen/text_indent"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_runtime"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_runtime"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack"/>
                            <TextView
                                android:id="@+id/tv_runtime_text"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@{movie.runtime}"
                                android:textSize="@dimen/text_des"
                                android:layout_marginLeft="@dimen/text_indent"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.50"
                            android:orientation="horizontal"
                            android:layout_marginTop="5dp"
                            android:padding="5dp">
                            <TextView
                                android:id="@+id/tv_directors"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:text="@string/sub_directors"
                                android:textSize="@dimen/text_sub_title"
                                android:textColor="@color/colorBlack"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:padding="5dp">
                        <TextView
                            android:id="@+id/tv_actors"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/sub_name"
                            android:textSize="@dimen/text_sub_title"
                            android:textColor="@color/colorBlack"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>